brexit shorts desktop version

--- a/embeds/brexit-shorts/index.html
+++ b/embeds/brexit-shorts/index.html
@@ -3,7 +3,7 @@
         <div class='header__brexit-logo'><img src='@@assetPath@@/brexit-badge.svg'></div>
         <div class='header__text'>
             <h1>brexit shorts</h1>
-            <h2>dramas from a divided nation</h2>
+            <h2>dramas from a divided nation</h2>
         </div>
     </div>
     <div class='films swiper-container'>
@@ -11,7 +11,9 @@
             <div class='card first swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_1-Time-to-Leave.jpg' srcset='@@assetPath@@/m_1-Time-to-Leave.jpg 1x, @@assetPath@@/m_1-Time-to-Leave@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_1-Time-to-Leave.jpg' data-srcset='@@assetPath@@/m_1-Time-to-Leave.jpg 1x, @@assetPath@@/m_1-Time-to-Leave@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_1-Time-to-Leave.jpg' data-srcset='@@assetPath@@/d-l_1-Time-to-Leave.jpg 1x, @@assetPath@@/d-l_1-Time-to-Leave@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_1-Time-to-Leave.jpg' data-srcset='@@assetPath@@/d-s_1-Time-to-Leave.jpg 1x, @@assetPath@@/d-s_1-Time-to-Leave@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -23,7 +25,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_2-Permanent-Sunshine.jpg' srcset='@@assetPath@@/m_2-Permanent-Sunshine.jpg 1x, @@assetPath@@/m_2-Permanent-Sunshine@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_2-Permanent-Sunshine.jpg' data-srcset='@@assetPath@@/m_2-Permanent-Sunshine.jpg 1x, @@assetPath@@/m_2-Permanent-Sunshine@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_2-Permanent-Sunshine.jpg' data-srcset='@@assetPath@@/d-l_2-Permanent-Sunshine.jpg 1x, @@assetPath@@/d-l_2-Permanent-Sunshine@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_2-Permanent-Sunshine.jpg' data-srcset='@@assetPath@@/d-s_2-Permanent-Sunshine.jpg 1x, @@assetPath@@/d-s_2-Permanent-Sunshine@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -35,7 +39,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_3-Just-a-T-shirt.jpg' srcset='@@assetPath@@/m_3-Just-a-T-shirt.jpg 1x, @@assetPath@@/m_3-Just-a-T-shirt@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_3-Just-a-T-shirt.jpg' data-srcset='@@assetPath@@/m_3-Just-a-T-shirt.jpg 1x, @@assetPath@@/m_3-Just-a-T-shirt@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_3-Just-a-T-shirt.jpg' data-srcset='@@assetPath@@/d-l_3-Just-a-T-shirt.jpg 1x, @@assetPath@@/d-l_3-Just-a-T-shirt@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_3-Just-a-T-shirt.jpg' data-srcset='@@assetPath@@/d-s_3-Just-a-T-shirt.jpg 1x, @@assetPath@@/d-s_3-Just-a-T-shirt@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -47,7 +53,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_4-Your-Mas-a-Hard-Brexit.jpg' srcset='@@assetPath@@/m_4-Your-Mas-a-Hard-Brexit.jpg 1x, @@assetPath@@/m_4-Your-Mas-a-Hard-Brexit@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_4-Your-Mas-a-Hard-Brexit.jpg' data-srcset='@@assetPath@@/m_4-Your-Mas-a-Hard-Brexit.jpg 1x, @@assetPath@@/m_4-Your-Mas-a-Hard-Brexit@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_4-Your-Mas-a-Hard-Brexit.jpg' data-srcset='@@assetPath@@/d-l_4-Your-Mas-a-Hard-Brexit.jpg 1x, @@assetPath@@/d-l_4-Your-Mas-a-Hard-Brexit@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_4-Your-Mas-a-Hard-Brexit.jpg' data-srcset='@@assetPath@@/d-s_4-Your-Mas-a-Hard-Brexit.jpg 1x, @@assetPath@@/d-s_4-Your-Mas-a-Hard-Brexit@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -59,7 +67,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_5-Go-Home.jpg' srcset='@@assetPath@@/m_5-Go-Home.jpg 1x, @@assetPath@@/m_5-Go-Home@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_5-Go-Home.jpg' data-srcset='@@assetPath@@/m_5-Go-Home.jpg 1x, @@assetPath@@/m_5-Go-Home@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_5-Go-Home.jpg' data-srcset='@@assetPath@@/d-l_5-Go-Home.jpg 1x, @@assetPath@@/d-l_5-Go-Home@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_5-Go-Home.jpg' data-srcset='@@assetPath@@/d-s_5-Go-Home.jpg 1x, @@assetPath@@/d-s_5-Go-Home@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -71,7 +81,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_6-Better-Together.jpg' srcset='@@assetPath@@/m_6-Better-Together.jpg 1x, @@assetPath@@/m_6-Better-Together@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_6-Better-Together.jpg' data-srcset='@@assetPath@@/m_6-Better-Together.jpg 1x, @@assetPath@@/m_6-Better-Together@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_6-Better-Together.jpg' data-srcset='@@assetPath@@/d-l_6-Better-Together.jpg 1x, @@assetPath@@/d-l_6-Better-Together@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_6-Better-Together.jpg' data-srcset='@@assetPath@@/d-s_6-Better-Together.jpg 1x, @@assetPath@@/d-s_6-Better-Together@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -83,7 +95,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_7-The-Pines.jpg' srcset='@@assetPath@@/m_7-The-Pines.jpg 1x, @@assetPath@@/m_7-The-Pines@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_7-The-Pines.jpg' data-srcset='@@assetPath@@/m_7-The-Pines.jpg 1x, @@assetPath@@/m_7-The-Pines@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_7-The-Pines.jpg' data-srcset='@@assetPath@@/d-l_7-The-Pines.jpg 1x, @@assetPath@@/d-l_7-The-Pines@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_7-The-Pines.jpg' data-srcset='@@assetPath@@/d-s_7-The-Pines.jpg 1x, @@assetPath@@/d-s_7-The-Pines@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -95,7 +109,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_8-Burn.jpg' srcset='@@assetPath@@/m_8-Burn.jpg 1x, @@assetPath@@/m_8-Burn@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_8-Burn.jpg' data-srcset='@@assetPath@@/m_8-Burn.jpg 1x, @@assetPath@@/m_8-Burn@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-s_8-Burn.jpg' data-srcset='@@assetPath@@/d-s_8-Burn.jpg 1x, @@assetPath@@/d-s_8-Burn.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_8-Burn.jpg' data-srcset='@@assetPath@@/d-s_8-Burn.jpg 1x, @@assetPath@@/d-s_8-Burn.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
@@ -107,7 +123,9 @@
             <div class='card swiper-slide'>
                 <a class='link'></a>
                 <div class='background'>
-                    <img src='@@assetPath@@/m_9-Shattered.jpg' srcset='@@assetPath@@/m_9-Shattered.jpg 1x,@@assetPath@@/m_9-Shattered@2x.jpg  2x'>
+                    <img class='mob-load portrait' data-src='@@assetPath@@/m_9-Shattered.jpg' data-srcset='@@assetPath@@/m_9-Shattered.jpg 1x,@@assetPath@@/m_9-Shattered@2x.jpg 2x'>
+                    <img class='dsk-load landscape large' data-src='@@assetPath@@/d-l_9-Shattered.jpg' data-srcset='@@assetPath@@/d-l_9-Shattered.jpg 1x, @@assetPath@@/d-l_9-Shattered@2x.jpg 2x'>
+                    <img class='dsk-load landscape small' data-src='@@assetPath@@/d-s_9-Shattered.jpg' data-srcset='@@assetPath@@/d-s_9-Shattered.jpg 1x, @@assetPath@@/d-s_9-Shattered@2x.jpg 2x'>
                 </div>
                 <div class='foreground'>
                     <div class='play-button'></div>
