final brexit shorts thrasher

--- a/embeds/brexit-shorts/index.html
+++ b/embeds/brexit-shorts/index.html
@@ -1,10 +1,10 @@
 <div class='brexit-shorts-thrasher'>
     <div class='header'>
         <div class='header__brexit-logo'><img src='@@assetPath@@/brexit-badge.svg'></div>
-        <div class='header__text'>
+        <a href='https://www.theguardian.com/stage/series/brexit-shorts' class='header__text'>
             <h1>brexit shorts</h1>
             <h2>dramas from a divided nation</h2>
-        </div>
+        </a>
     </div>
     <div class='films swiper-container'>
         <div class='swiper-wrapper'>
